Revert "Merge pull request #15 from 0motionguy/feat/v2-foundation"
This reverts commit e4e49a34efc1261561abb5daffe7d14df0041ffa, reversing
changes made to 397edc774c354ad01e20ddec72f191b343fb190a.
